Revert to celery concurrency

--- a/contrib/supervisord.conf
+++ b/contrib/supervisord.conf
@@ -35,11 +35,10 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:build]
-command = celery worker -A readthedocs -Q default,celery,web,builder -l DEBUG
+command = celery worker -A readthedocs -Q default,celery,web,builder -l DEBUG -c 2
 process_name = build-%(process_num)s
 directory = ../
 priority = 100
-numprocs = 2
 stopasgroup=True
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
